@@ -1,6 +1,6 @@
 package org.opensearch.client.opensearch._types.query_dsl;
 
-import java.util.List;
+import java.util.Collections;
 import org.junit.Test;
 import org.opensearch.client.opensearch.model.ModelTestCase;
 
@@ -8,7 +8,7 @@ public class SpanFirstQueryTest extends ModelTestCase {
     @Test
     public void toBuilder() {
         SpanFirstQuery origin = new SpanFirstQuery.Builder().end(1)
-            .match(new SpanQuery.Builder().spanOr(new SpanOrQuery.Builder().clauses(List.of()).build()).build())
+            .match(new SpanQuery.Builder().spanOr(new SpanOrQuery.Builder().clauses(Collections.emptyList()).build()).build())
             .build();
         SpanFirstQuery copied = origin.toBuilder().build();
 
