@@ -1,6 +1,6 @@
 package org.opensearch.client.opensearch._types.query_dsl;
 
-import java.util.List;
+import java.util.Collections;
 import org.junit.Test;
 import org.opensearch.client.opensearch.model.ModelTestCase;
 
@@ -8,7 +8,9 @@ public class SpanNearQueryTest extends ModelTestCase {
     @Test
     public void toBuilder() {
         SpanNearQuery origin = new SpanNearQuery.Builder().clauses(
-            List.of(new SpanQuery.Builder().spanOr(new SpanOrQuery.Builder().clauses(List.of()).build()).build())
+            Collections.singletonList(
+                new SpanQuery.Builder().spanOr(new SpanOrQuery.Builder().clauses(Collections.emptyList()).build()).build()
+            )
         ).build();
         SpanNearQuery copied = origin.toBuilder().build();
 
